2005-06-06  Kevin Ryde  <user42@zip.com.au>

	* tests/strings.test (string-split): Try splitting on an 8-bit char.

2005-04-30  Kevin Ryde  <user42@zip.com.au>

	* tests/numbers.test (/): New tests.

2005-04-25  Kevin Ryde  <user42@zip.com.au>

	* tests/ramap.test (array-map!): Further tests.

2005-04-23  Kevin Ryde  <user42@zip.com.au>

	* tests/list.test (list, make-list, cons*): New tests.

	* tests/numbers.test (numerator, denominator): New tests.

2005-04-02  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-1.test (lset-union): New tests.

2005-03-26  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-13.test (string-index): Exercise 8-bit char in string.

2005-03-18  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-17.test: New file.
	* Makefile.am (SCM_TESTS): Add it.

2005-02-21  Kevin Ryde  <user42@zip.com.au>

	* tests/numbers.test (string->number): Exercise polar form with
	invalid angle.

2005-02-18  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-1.test (lset-adjoin): Amend tests to expect duplicates
	among args cast out.

2005-02-12  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-1.test (reduce, reduce-right): New tests.

2005-02-04  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-1.test (list=): New tests.

2005-01-29  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-1.test (lset-adjoin): New tests.

2005-01-24  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-1.test (lset=): New tests.

2005-01-12  Kevin Ryde  <user42@zip.com.au>

	* tests/srfi-39.test (current-input-port, current-output-port,
	current-error-port): New tests.

2005-01-02  Kevin Ryde  <user42@zip.com.au>

	* Makefile.am (SCM_TESTS): Add srfi-39.test.

2004-12-27  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/eval.test (continuations): Test making a stack from a
	continuation, and related functions.

2004-12-16  Kevin Ryde  <user42@zip.com.au>

	* tests/ramap.test: New file, test array-map!.
	* Makefile.am (SCM_TESTS): Add it.

2004-12-09  Kevin Ryde  <user42@zip.com.au>
