@@ -1,3 +1,7 @@
+2005-06-07  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* tests/srcprop.test ("set-source-property!"): Two new tests.
+
 2005-06-06  Kevin Ryde  <user42@zip.com.au>
 
 	* tests/strings.test (string-split): Try splitting on an 8-bit char.
